--- a/Classifier.csproj
+++ b/Classifier.csproj
@@ -63,7 +63,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="BayesianClassifier.cs" />
+    <Compile Include="Classifier.cs" />
     <Compile Include="Category.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
